# citrascope-pi

./: .dockerignore  .gitignore  Dockerfile  README.md  build-docker.sh  build.py  build_image.py  docker-compose.yml  pyproject.toml  release.py  requirements-dev.txt  setup_notes.md  test-docker.sh  test.py
.github/workflows/: build-image.yml  build-pi-image.yml
images/: .gitkeep
scripts/: README.md  add_user.py  build_result.py  citrascope_ap_setup.py  config.py  configure_banner.py  configure_comitup.py  configure_gps_timing.py  configure_headless.py  configure_hostname.py  enable_ssh.py  enable_wifi.py  install-citrascope-ap-setup.py  install_citrascope.py  install_citrascope_ap_setup.py  install_citrasense.py  install_hardware_drivers.py  mount_img.py  resize_fs.py  set_hostname.py  update_upgrade_chroot.py
