[project]
name = "citrascope-pi"
version = "0.2"
description = "Turnkey Raspberry Pi image builder for Citrascope telescope control"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "yaspin>=3.0.0",
    "bump-my-version>=1.2.6",
]

[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = true
push = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
commit_message = "Release v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
